# dotlanth

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ADR-26031.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  Documentation.md  E-26010-DOC-S1.md  E-26010-DOC-S2.md  E-26010-DOC-S3.md  E-26010-DOC.md  Implement.md  LICENSE  LICENSE-COMMERCIAL  Plan.md  Prompt.md  README.md  RFC-26031.md  SECURITY.md  Tracker.md  codecov.yml  dotlanth.slnx  justfile  meson-setup  meson.build  meson.options
benchmarks/: arithmetic_bench.cpp  bench_runner.cpp  bigint_benchmark.cpp  bitwise_bench.cpp  crypto_benchmark.cpp  meson.build  simd_benchmark.cpp  vm_bench.cpp
crates/dot/: Cargo.toml
crates/dot/src/: main.rs
crates/dot/src/commands/: determinism.rs  export_artifacts.rs  init.rs  inspect.rs  logs.rs  mod.rs  replay.rs  run.rs  support.rs  validate_replay.rs
crates/dot/src/tui/: app.rs  fixtures.rs  jobs.rs  mod.rs  model.rs  registry.rs  render.rs  state.rs
crates/dot/tests/: determinism_e2e_cli.rs  export_artifacts_cli.rs  init_cli.rs  inspect_cli.rs  logs_cli.rs  replay_cli.rs  run_cli.rs  validate_replay_cli.rs
crates/dot_artifacts/: Cargo.toml
crates/dot_artifacts/src/: error.rs  lib.rs  schema.rs  tests.rs  util.rs  writer.rs
crates/dot_db/: Cargo.toml
crates/dot_db/src/: lib.rs
crates/dot_ops/: Cargo.toml
crates/dot_ops/src/: lib.rs
crates/dot_vm/: Cargo.toml
crates/dot_vm/src/: error.rs  event.rs  instruction.rs  lib.rs  registers.rs  value.rs  vm.rs
fuzz/: CMakeLists.txt  asm_fuzzer.cpp  bytecode_fuzzer.cpp  capi_fuzzer.cpp  dsl_fuzzer.cpp  execute_fuzzer.cpp  instruction_fuzzer.cpp  meson.build  replication_fuzzer.cpp
fuzz/corpus/asm/: minimal.asm  with_instructions.asm  with_labels.asm
fuzz/corpus/dsl/: minimal.dsl  with_import.dsl  with_trigger.dsl
fuzz/scripts/: fuzz_coverage.sh  generate_corpus.sh  minimize_corpus.sh  reproduce_crash.sh  run_fuzzer.sh
tests/: README.md  meson.build
tests/Dot.Entropy.Tests/: Dot.Entropy.Tests.csproj  ProductMetadataTests.cs
tests/Dot.Forge.Tests/: Dot.Forge.Tests.csproj  ProductMetadataTests.cs
tests/Dot.Shared.Tests/: AssemblyMarkerTests.cs  Dot.Shared.Tests.csproj
tests/asm/: asm_integration_test.cpp  asm_lexer_test.cpp  asm_parser_test.cpp
tests/cmake-integration/: CMakeLists.txt  capi_test.c  main.cpp
tests/dotvm/: dotvm_c_test.c  dotvm_c_test.cpp
tests/dotvm/cli/: bench_cli_test.cpp  bench_formatter_test.cpp  cli_test.cpp  dis_cli_test.cpp  dis_integration_test.cpp  file_resolver_test.cpp  formatter_test.cpp  integration_test.cpp  pkg_cli_test.cpp  terminal_test.cpp  vm_bench_command_test.cpp  vm_cli_test.cpp  vm_integration_test.cpp  watcher_test.cpp
tests/dotvm/cli/bench/: baseline_manager_test.cpp  benchmark_statistics_test.cpp  flamegraph_collector_test.cpp
tests/dotvm/cli/doc/: doc_comment_test.cpp  doc_extractor_test.cpp
tests/dotvm/core/: alu_test.cpp  arch_config_test.cpp  arch_register_file_test.cpp  bytecode_test.cpp  capability_test.cpp  collections_test.cpp  concepts_test.cpp  disassembler_test.cpp  error_formatter_test.cpp  executor_test.cpp  fp_executor_test.cpp  fuzz_edge_cases_test.cpp  inspector_test.cpp  instruction_test.cpp  interop_32_64_test.cpp  memory_test.cpp  permission_test.cpp  register_file_test.cpp  resource_limiter_test.cpp  security_hardening_test.cpp  string_pool_test.cpp  value_test.cpp  vm_context_simd_test.cpp  vm_context_test.cpp
tests/dotvm/core/bigint/: bigint_test.cpp
tests/dotvm/core/crypto/: aes256gcm_test.cpp  aes_test.cpp  blake3_test.cpp  crypto_executor_test.cpp  ed25519_test.cpp  keccak_test.cpp  sha256_test.cpp
tests/dotvm/core/dsl/: benchmark_test.cpp  integration_test.cpp  lexer_test.cpp  parser_test.cpp
tests/dotvm/core/graph/: dependency_graph_test.cpp  dot_scheduler_test.cpp
tests/dotvm/core/io/: sandbox_test.cpp
tests/dotvm/core/link/: link_cascade_test.cpp  link_error_test.cpp  link_integration_test.cpp  link_key_encoder_test.cpp  link_manager_test.cpp  link_traversal_test.cpp  object_id_test.cpp
tests/dotvm/core/policy/: decision_tree_test.cpp  json_parser_test.cpp  policy_engine_test.cpp
tests/dotvm/core/schema/: link_def_test.cpp  migration_test.cpp  object_type_test.cpp  property_type_test.cpp  schema_error_test.cpp  schema_registry_test.cpp  supply_chain_test.cpp  validator_test.cpp
tests/dotvm/core/security/: async_audit_logger_test.cpp  audit_event_test.cpp  isolation_manager_test.cpp  opcode_permission_test.cpp  security_context_test.cpp
tests/dotvm/core/simd/: cpu_features_test.cpp  simd_alu_test.cpp  vector_register_file_test.cpp  vector_types_test.cpp
tests/dotvm/core/state/: cost_model_test.cpp  execution_plan_test.cpp  log_record_test.cpp  mpt_benchmark_test.cpp  mpt_node_test.cpp  mpt_proof_test.cpp  mpt_test.cpp  mpt_types_test.cpp  mvcc_test.cpp  (+15 more)
tests/dotvm/debugger/: breakpoint_manager_test.cpp  command_parser_test.cpp  debug_client_test.cpp  debug_formatter_test.cpp  debug_session_test.cpp  watch_manager_test.cpp
tests/dotvm/exec/: call_stack_test.cpp  comparison_ops_test.cpp  database_bridge_test.cpp  debug_mode_test.cpp  exception_handling_test.cpp  execution_engine_test.cpp  execution_limits_test.cpp  memory_load_store_test.cpp  simd_exec_test.cpp  state_opcodes_test.cpp
tests/dotvm/jit/: jit_cache_test.cpp  jit_code_buffer_test.cpp  jit_integration_test.cpp  jit_profiler_test.cpp  profiling_context_test.cpp
tests/dotvm/pkg/: dependency_resolver_test.cpp  lock_file_test.cpp  package_cache_test.cpp  package_manager_test.cpp  package_registry_test.cpp  version_constraint_test.cpp  version_test.cpp
tests/dotvm/test_utils/: common.hpp  mock_memory_manager.hpp  mock_register_file.hpp  mock_test.cpp  property_testing.hpp  property_testing_test.cpp  test_fixtures.hpp
tests/dsl/compiler/: bytecode_emitter_test.cpp  codegen_test.cpp  integration_test.cpp  ir_builder_test.cpp  optimizer_test.cpp
tests/dsl/stdlib/: capability_test.cpp  integration_test.cpp  registry_test.cpp
(+573 files in other folders)
